--- a/client/css/screens/not-main.css
+++ b/client/css/screens/not-main.css
@@ -1,10 +1,11 @@
-.not-main-screen{
-  background-color: #27503e;
-}
 
 .not-main-screen__dark{
   background-color: #000000;
 }
+
+.not-main-screen{
+  background-color: #27503e;
+} 
 
 .pdf-img{
   background-color: white;
@@ -18,4 +19,25 @@
   width:100%;
   height:90%;
   border-radius: 40px;
+} 
+
+
+/* 모바일 - 배경 없이 꽉 채우기 */
+@media (max-width:800px){
+  .not-main-screen{
+    background-color: #ffffff;
+  }
+  .pdf-img{
+    width:100%;
+    height:100%;
+    margin:0px;
+    margin-top:20px;
+    border-radius: 0px;
+  }
+  
+  .pdf-img img{
+    width:100%;
+    height:90%;
+    border-radius: 0px;
+  } 
 }
