--- a/client/css/screens/main.css
+++ b/client/css/screens/main.css
@@ -1,189 +1,169 @@
 
+#main-page{
+  background-color: white;
+  color: #27503e;
+}
 .main-item{
   width:90%;
   margin: 20px 0px;
 }
 
-.main-text{
-  font-size:20px;
-  line-height: 2;
+
+/* banner 기본 설정 */
+.main-page .main-banner{
+  display: flex;
+  align-items: center;
+  height:460px;
+  background-color: #27503e;
+}
+.main-page .main-banner__logo img{
+  width:260px;
+  height:260px;
+  margin:15px;
 }
 
 
-/* =====type animation & media query ===== */
-@media (min-width:800px) {
+/* dark mode banner */
+#main-dark-page .main-banner{
+  position:relative;
+}
+#main-dark-page .main-banner__img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  overflow:hidden;
+}
+#main-dark-page .main-banner__logo , #main-dark-page .main-banner__text{
+  position:absolute;
+}
+
+/* 모바일용 배너 글씨 */
+.not-typing-txt{
+  visibility: hidden;
+}
+
+
+
+
+/* ==========데스크탑============*/
+@media (min-width:1000px) {
+
+  /* 모바일 main item */
   .main-item{
     width:80%;
     margin: 50px 0px;
   }
 
-  .main-banner{
-    display: flex;
-    align-items: center;
-  }
 
-  .main-banner__text{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-  }
-
-  .main-banner__basic-text {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-  }
-
-  .main-banner__ani-text{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-  }
-
-  .type-ani{
+  /* 다크 모드 데스크탑 배너 */
+  #main-dark-page .main-banner__text{
+    left:410px;
     width:auto;
+    height:100%;
+    top:30%;
   }
-  
-  .typing h2{
-    height:35px;
-  
+
+  #main-dark-page .main-banner__logo {
+    left:60px;
   }
-          
-          .typing::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 5px;
-            height: 80%;
-            background: #ffffff;
-            animation: cursorBlink 0.8s steps(3) infinite;
-          }
-  
-          @keyframes cursorBlink {
-            0%,
-            75% {
-              opacity: 1;
-            }
-  
-            76%,
-            100% {
-              opacity: 0;
-            }
-          }
-          
-          .typing {
-            position: relative;
-            -webkit-box-reflect: below 1px linear-gradient(transparent, #3333);
-          }
-  
-          .typing h2 {
-            position: relative;
-            color: #ffffff;
-            letter-spacing: 5px;
-            font-size: 3rem;
-            overflow: hidden;
-            margin-bottom: 0;
-            animation: type 5s steps(15) infinite;
-          }
-  
-          @keyframes type {
-            0%,
-            100% {
-              width: 0px;
-            }
-  
-            30%,
-            60% {
-              width: 550px;
-            }
-          }
-  
-          @media (max-width: 500px) {
-            .typing h2 {
-              font-size: 3rem;
-              animation: type 5s steps(10) infinite;
-            }
-  
-            @keyframes type {
-              0%,
-              100% {
-                width: 0px;
-              }
-  
-              30%,
-              60% {
-                width:550px;
-              }
-            }
-          }
 
-/* 애니메이션 */
-#main-page .main-ani{
-  position:relative; 
-  opacity:0;
-  /* 애니메이션 2번째거 설정 */
-  /* margin-left:-300px;    
-  max-width:100%;   */
-}
 
-}
-/* 스크롤 내리면 왼쪽에서 오른쪽으로 오는 애니메이션*/
-/* #main-page .main-item   {
-  position :relative;
-  left : 400px;
-  animation : slide 2s ease-out;
+  /* 다크 배너 애니메이션*/
 
-} 
-      @keyframes slide {
-        from{
-          left : -100px;
-          opacity : 0;
+  .typing-txt{
+    display: none;
+    }
+    .typing-txt ul{
+    list-style:none;
+    }
+    .typing ul li{
+    display:block;
+    }
 
+  /* 커서 */
+  .typing li.on::after {
+    content: "|";
+    animation: blink 1s infinite;
+  }
+  @keyframes blink {
+    0% {
+      opacity:1;
+    }
+    49% {
+      opacity:1;
+    }
+    50% {
+      opacity:0;
+    }
+    100% {
+      opacity:0;
+    }
+  }
+
+  /* 배너 애니메이션 글씨 설정 */
+  .main-banner__text li{
+    font-size: 22px;
+    line-height: 3;
+  }
+  .main-banner__text li:last-child{
+    font-size:30px;
+  }
+
+  /* 스크롤 애니메이션 */
+  #main-page .main-ani{
+    position:relative; 
+    opacity:0;
+    /* 애니메이션 2번째거 설정 */
+    /* margin-left:-300px;    
+    max-width:100%;   */
+  }
+
+  /* 스크롤 내리면 왼쪽에서 오른쪽으로 오는 애니메이션*/
+  /* #main-page .main-item   {
+    position :relative;
+    left : 400px;
+    animation : slide 2s ease-out;
+
+  } 
+        @keyframes slide {
+          from{
+            left : -100px;
+            opacity : 0;
+
+          }
+          to {
+            left : 400px;
+            opacity : 1;
+
+          }
         }
-        to {
-          left : 400px;
-          opacity : 1;
-
+          
+        @keyframes disappear {
+          from{
+            left : 400px;
+            opacity:1;
+          }
+          to {
+            left : -100px;
+            opacity:0;
+          }
         }
-      }
+
+  #main-dark.main-item   {
+    position :absolute;
+    left : 400px;
+    animation : slide 2s ease-out;
         
-      @keyframes disappear {
-        from{
-          left : 400px;
-          opacity:1;
-        }
-        to {
-          left : -100px;
-          opacity:0;
-        }
-      }
-
-#main-dark.main-item   {
-  position :absolute;
-  left : 400px;
-  animation : slide 2s ease-out;
-      
-      }  */
-#main-dark-page .main-banner__text{
-  left:430px;
-  width:auto;
-}
-
-
-#main-dark-page .main-banner__logo {
-  left:60px;
-}
-
-
-.typing h2{
-  font-size:20px; 
-  /* font-size:1.8vw; */
-}
+        }  */
 
 }
-/* =====다크 배너 모바일 반응형 ===== */
+
+
+
+/* =========모바일 ======= */
+/* 다크 배너 모바일 반응형 */
 @media (min-width:300px) and (max-width:1000px){ 
+  
   #main-dark-page .main-banner__logo{
     top:40%;
     left:50%;
@@ -195,66 +175,27 @@
     transform: translate(-50%, -50%);
   }
 
-  .main-banner__basic-text{
-    display:none;
+  /* 배너 애니메이션 글씨 모바일 - 안보이게 */
+  .main-banner__text{
+    width:90%;
+  }
+  .main-banner__text li{
+    display: none;
+  }
+  .not-typing-txt{
+    visibility: visible;
+  }
+  .not-typing-txt h2{
+    line-height:2;
+    font-size:13px;
   }
 
-  .main-banner__ani-text{
-    font-size:18px;
+  .not-typing-txt h2:last-child{
+    line-height:2;
+    font-size:17px;
   }
 
 }
-/*====이미지 떠오르게 하기====*/
-
-
-
-#main-page{
-  background-color: white;
-  color: #27503e;
-}
-
-
-/* light mode banner */
-.main-page .main-banner{
-  height:460px;
-  background-color: #27503e;
-}
-
-.main-page .main-banner__logo img{
-  width:260px;
-  height:260px;
-  margin:15px;
-}
-
-/* dark mode banner */
-
-#main-dark-page .main-banner{
-  position:relative;
-}
-
-#main-dark-page .main-banner__img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  overflow:hidden;
-}
-
-#main-dark-page .main-banner__logo , #main-dark-page .main-banner__text{
-  position:absolute;
-}
-  
-
-
-/* #main-dark-page .main-banner__container{
-  position:absolute;
-  width:100%;
-  display:flex;
-  align-items: center;
-} */
-
-
-
-
 
 
 
@@ -265,6 +206,16 @@
 .main{
   width:100%;
   height:auto;
+}
+
+.main-text{
+  font-size:20px;
+  line-height: 2;
+}
+
+
+main p{
+  line-height:30px;
 }
 
 
@@ -291,9 +242,6 @@
         height: 300px;
       }
 }
-
-/* 애니메이션 모바일 */
-
 
 
 /*icons*/
@@ -380,22 +328,3 @@
 
 
 
-main p{
-  line-height:30px;
-}
-
-
-
-/* message to join 버튼처럼 하려면
-footer h3{
-  초록배경 흰글씨
-  width:200px;
-  background-color: #27503e;
-  color:white;
-  그 외
-  border: 3px solid #27503e;
-  box-shadow: 3px 3px 0px #27503e;
-  padding:15px;
-  border-radius:15px;
-} 
-*/
